Removed email verification. added camera not worked on IE 11 error resolve pdf scroll error

--- a/MROWizardApplication/src/assets/styles/RequestWizard.css
+++ b/MROWizardApplication/src/assets/styles/RequestWizard.css
@@ -356,7 +356,11 @@ button.wizardSelectionButton:hover {
   display: table-cell;
 }
 
-.v-dialog{
+.withOverflow{
+  max-height: 100%  !important;
+  overflow: auto !important;
+}
+.withoutOverflow{
   max-height: 100%  !important;
   overflow: hidden !important;
 }
